src/styles.scss
/* You can add global styles to this file, and also import other style files */
@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  --white-color: rgb(255, 255, 255);
  --white-color-trans: rgba(255, 255, 255, 0.94);
  --black-color: rgb(15, 15, 15);
}

html,
body {
  @apply h-full;
}

body {
  margin: 0;
  font-family: 'Roboto', 'Arial', sans-serif;
  scrollbar-color: rgba(0, 0, 0, 0.68) var(--white-color);
  text-shadow: 0 0 6px rgba(0, 0, 0, 0);
  pre {
    font-family: 'Roboto', 'Arial', sans-serif;
  }
}

.overlay-panel {
  @apply bg-[var(--white-color)] rounded-[12px] overflow-hidden;
  box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 32px 0px;
}

.mdc-list-list-item-one-line-container-height-40px {
  --mdc-list-list-item-one-line-container-height: 40px;
}

.mdc-list-list-item-one-line-container-height-36px {
  --mdc-list-list-item-one-line-container-height: 36px;
}

